--- a/app/assets/stylesheets/gandhi.css
+++ b/app/assets/stylesheets/gandhi.css
@@ -14,9 +14,14 @@ body {
 }
 .navbar-inverse .navbar-inner {
   background-color: #0066ff;
+  background-image: -moz-linear-gradient(top, #0066ff, #005ce6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0066ff), to(#005ce6));
+  background-image: -webkit-linear-gradient(top, #0066ff, #005ce6);
+  background-image: -o-linear-gradient(top, #0066ff, #005ce6);
   background-image: linear-gradient(to bottom, #0066ff, #005ce6);
   background-repeat: repeat-x;
   border-color: #642246;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0066ff', endColorstr='#005ce6', GradientType=0);
 }
 .navbar-inverse .nav > li > a:focus,
 .navbar-inverse .nav > li > a:hover {
